--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-pyrofork==2.3.45
-Tgcrypto
-asyncio
+pyrogram==2.0.106
+tgcrypto
+
+motor==3.3.2
+pymongo[srv]==4.6.1
+dnspython
+
+aiofiles
 aiohttp
-pymongo[srv]==3.12.3
-motor==2.5.1
-marshmallow==3.14.1
-umongo==3.0.1
-validators
 requests
 bs4
 pytz
+validators
 shortzy
 python-dotenv==0.21.1
+
 Flask==1.1.2
 gunicorn==20.1.0
 Jinja2==3.0.3
